--- a/css/team16CSS.css
+++ b/css/team16CSS.css
@@ -73,3 +73,5 @@ highlight
     border: 2px solid #8AC007;
     padding-left: 100px;
 }
+
+.btn-custom { background-color: hsl(309, 100%, 33%) !important; background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#a8008f", endColorstr="#a8008f"); background-image: -khtml-gradient(linear, left top, left bottom, from(#a8008f), to(#a8008f)); background-image: -moz-linear-gradient(top, #a8008f, #a8008f); background-image: -ms-linear-gradient(top, #a8008f, #a8008f); background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #a8008f), color-stop(100%, #a8008f)); background-image: -webkit-linear-gradient(top, #a8008f, #a8008f); background-image: -o-linear-gradient(top, #a8008f, #a8008f); background-image: linear-gradient(#a8008f, #a8008f); border-color: #a8008f #a8008f hsl(309, 100%, 33%); color: #fff !important; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.00); -webkit-font-smoothing: antialiased; }
