--- a/css/team16CSS.css
+++ b/css/team16CSS.css
@@ -34,6 +34,12 @@ red
     font-weight: bold;
 }
 
+red2
+{
+    color:#ff0000;
+    font-weight: bold;
+}
+
 purple
 {
     color:#7401DF;
@@ -61,9 +67,6 @@ grey
 .popover 
 {
 	z-index: 100;
-/*
-	width: 67%;
-*/
 	width: 60%;
 }
 
@@ -123,12 +126,27 @@ highlight
 	background-image: -webkit-linear-gradient(top, #ffffff, #ffffff); 
 	background-image: -o-linear-gradient(top, #ffffff, #ffffff); 
 	background-image: linear-gradient(#ffffff, #ffffff); 
-/*	
-	border-color: #ffffff #ffffff hsl(360, 100%, 100%); 
-*/
 	border-color: #ff0000 #ff0000 hsl(360, 100%, 50%);
 	border-width: 5px;
 	color: #333 !important; 
 	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.00); 
+	-webkit-font-smoothing: antialiased; 
+}
+
+.btn-grey 
+{ 
+	background-color: hsl(119, 0%, 37%) !important; 
+	background-repeat: repeat-x; 
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#5e5e5e", endColorstr="#5e5e5e"); 
+	background-image: -khtml-gradient(linear, left top, left bottom, from(#5e5e5e), to(#5e5e5e)); 
+	background-image: -moz-linear-gradient(top, #5e5e5e, #5e5e5e); 
+	background-image: -ms-linear-gradient(top, #5e5e5e, #5e5e5e); 
+	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #5e5e5e), color-stop(100%, #5e5e5e)); 
+	background-image: -webkit-linear-gradient(top, #5e5e5e, #5e5e5e); 
+	background-image: -o-linear-gradient(top, #5e5e5e, #5e5e5e); 
+	background-image: linear-gradient(#5e5e5e, #5e5e5e); 
+	border-color: #5e5e5e #5e5e5e hsl(119, 0%, 37%); 
+	color: #fff !important; 
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.00); 
 	-webkit-font-smoothing: antialiased; 
 }
